Changes in font-size

--- a/app/assets/stylesheets/login.css.scss
+++ b/app/assets/stylesheets/login.css.scss
@@ -19,7 +19,7 @@ body{
 	bottom: -40px;
 	width: auto;
 	height: auto;
-	background-image: url(https://i.pinimg.com/originals/70/54/e7/7054e7423fb639362cd6b196115d43ef.jpg);
+	background-image: url("loginCat.jpg");
 	background-size: cover;
 	-webkit-filter: blur(5px);
 	z-index: 0;
